<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormularioActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_label_titulo"
            android:id="@+id/form_titulo"
            android:layout_marginBottom="10dp"
            ></EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_label_link_imagem"
            android:id="@+id/form_link_imagem"
            android:layout_marginBottom="10dp"
            ></EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_label_link_titulo"
            android:id="@+id/form_link_titulo"
            android:layout_marginBottom="10dp"
            ></EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/form_label_ultimo_cap"
            android:id="@+id/form_ultimo_cap"
            android:layout_marginBottom="10dp"
            ></EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_label_salvar"
            android:id="@+id/btnSalvar">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_label_voltar"
            android:id="@+id/btnvoltar">
        </Button>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>